-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0
-
None
-
856f61666 (16.0)
If the host system does not have ninja installed, Qt Creator will use Makefile generator instead the configure Ninja generator. This happens even with a cross-compilation Kit that has been configured to use Ninja as the CMake generator with -DCMAKE_MAKE_PROGRAM configuration pointing to the ninja executable.
Can be reproduced with any Boot2Qt Kit and removing ninja from system paths.
For Gerrit Dashboard: QTCREATORBUG-32436 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
620445,2 | CMakePM: Check CMAKE_MAKE_PROGRAM for Ninja presence | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |