CMakePM: Check CMAKE_MAKE_PROGRAM for Ninja presence

Previously the Qt SDK location and the PATH environment variable was
checked for ninja build tool presence.

But CMAKE_MAKE_PROGAM CMake variable can be used to tell CMake which
build tool to use. If this is the case then the Ninja generator can be
used.

Fixes: QTCREATORBUG-32436
Change-Id: Ie15b7f770cc4b731033647733a0f419015fb3e0b
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>